# Remix-data

./: ANALYSIS.md  ANALYSIS_free_data_api.md  ANALYSIS_risk_assessment.md  DETAILED_ANALYSIS_FREE_DATA_API.md  DETAILED_ANALYSIS_RISK_ASSESSMENT.md  DETAILED_ANALYSIS_SP_DATA.md  MICROSERVICE_ARCHITECTURE.md  README.md  database_schemas.json  requirements.txt  runner.py  taifex_format_catalog.json
-risk-assessment-feat-microservice-refactor/: .gitignore  1  2  (+11 more)
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/: .gitignore  AAR_NYFED_ENV_DOCTRINE.txt  Program_Development_Project.txt  README.md  alpha_vantage_api_test.py  config.py  config.yaml.template  data_pipeline.py  finlab_api_test.py  finmind_fix_log.txt  finmind_real_api_test.py  finnhub_api_test.py  fmp_api_test.py  fred_api_test.py  initialize_global_log.py  main.py  market_briefing_log.txt  polygon_api_test.py  pyproject.toml  requirements.txt  run.py  run_finmind_fix_v2.sh  run_historical_simulation.sh  run_nyfed_test.py  run_prototype.sh  run_viability_test.sh  test_prospector.py  validate_classifier.py  viability_logic.py  yfinance_test.py  一級交易pro 的副本  🚀 沉浸式儀表板與日誌平台 v10.0
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/AI_Assisted_Historical_Backtesting/: .gitignore  README.md  run_full_simulation.sh
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/Data test/: document.txt  sample1.csv  sample2.csv
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/MyTaifexDataProject/: .pre-commit-config.yaml  README.md  pyproject.toml  run.py
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/api_test_logs/: 2025-06-25T231434Z_system_build_log.txt  2025-06-25T235243+0000_system_build_log.txt  2025-06-25T235313+0000_system_build_log.txt  2025-06-25T235531+0000_system_build_log.txt  2025-06-26T000348Z_application_log.txt  2025-06-26T000449Z_application_log.txt  2025-06-26T000534Z_application_log.txt  2025-06-26T000659Z_application_log.txt  2025-06-26T000751Z_application_log.txt  2025-06-26T000852Z_application_log.txt  2025-06-26T011641Z_application_log.txt  2025-06-26T022713Z_application_log.txt  2025-06-26T024920Z_application_log.txt  2025-06-26T031345Z_application_log.txt  2025-06-26T033722Z_application_log.txt  2025-06-26T033811Z_application_log.txt  2025-06-26T033838Z_application_log.txt  2025-06-26T034204Z_application_log.txt  2025-06-26T034343Z_application_log.txt  2025-06-26T034537Z_application_log.txt  2025-06-26T034722Z_application_log.txt  main_execution_temp_log.txt
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/config/: format_catalog.json  schemas.json
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/configs/: __init__.py
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/connectors/: nyfed_connector.py  yfinance_connector.py
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/engine/: indicator_engine.py
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/logs/: nyfed_diagnosis_bash_report.txt
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/notebooks/: 01_test_dbnomics_connector_content.py
SP_DATA-feat-financial-data-pipeline/SP_DATA-feat-financial-data-pipeline/panoramic-market-analyzer/: README.md  requirements.txt  run_lint.sh  run_pipeline.sh  run_quality_checks.sh  run_tests.sh
(+233 files in other folders)
